--- a/Products1/Products1/Views/CategoriesView.xaml
+++ b/Products1/Products1/Views/CategoriesView.xaml
@@ -11,7 +11,7 @@
             Padding="5">
             <ListView 
                 HasUnevenRows="true" 
-                ItemsSource="{Binding Categories}">
+                ItemsSource="{Binding CategoriesList}">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
