--- a/Products1/Products1/Views/CategoriesView.xaml
+++ b/Products1/Products1/Views/CategoriesView.xaml
@@ -5,6 +5,13 @@
     x:Class="Products1.Views.CategoriesView" 
     BindingContext="{Binding Main, Source={StaticResource Locator}}" 
     Title="Categories">
+
+    <ContentPage.ToolbarItems>
+        <ToolbarItem 
+            Icon="ic_add_circle" 
+            Command="{Binding NewCategoryCommand}" /> 
+    </ContentPage.ToolbarItems>
+
     <ContentPage.Content>
         <StackLayout 
             BindingContext="{Binding Categories}" 
