--- a/Products1/Products1/Views/CategoriesView.xaml
+++ b/Products1/Products1/Views/CategoriesView.xaml
@@ -9,7 +9,7 @@
     <ContentPage.ToolbarItems>
         <ToolbarItem 
             Command="{Binding NewCategoryCommand}"
-            Icon="ic_add_circle"/>
+            Icon="ic_action_add_circle"/>
     </ContentPage.ToolbarItems>
     
     <ContentPage.Content>
@@ -18,10 +18,24 @@
             Padding="5">
             <ListView 
                 HasUnevenRows="true" 
-                ItemsSource="{Binding CategoriesList}">
+                IsPullToRefreshEnabled="True"
+                IsRefreshing="{Binding IsRefreshing, Mode=TwoWay}"
+                ItemsSource="{Binding CategoriesList}"
+                RefreshCommand="{Binding RefreshCommand}">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
+                            <ViewCell.ContextActions>
+                                <MenuItem 
+                                    Command="{Binding EditCommand}" 
+                                    Text="Edit">
+                                </MenuItem>
+                                <MenuItem 
+                                    Command="{Binding DeleteCommand}" 
+                                    IsDestructive="true"     
+                                    Text="Delete">
+                                </MenuItem>
+                            </ViewCell.ContextActions>                            
                             <Grid>
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="*"/>
